Alignemnet issues fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -119,14 +119,14 @@ body{
   scroll-behavior: smooth;
   -ms-overflow-style: none;  /* Internet Explorer 10+ */
   scrollbar-width: none;  /* Firefox */
-
+  width: 90%;
 }
 .match-card-container{
   display: flex;
   align-items: center;
   min-width: 400px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  margin: 30px;
+  margin: 40px;
   justify-content: space-between;
 }
 .match-card-container >img{
@@ -149,7 +149,7 @@ font-weight: 400
   font-weight: 600;
   color: white;
   cursor: pointer;
-  width: 100px;
+  width: 50px;
   height: 50px;
   margin: 0 10px;
   border-radius: 50%;
@@ -237,10 +237,10 @@ td >img{
   text-align: center;
 }
 .about-us-container{
-  margin-left: 70px;
-  margin-right: 70px;
-  padding-top: 50px;
-
+  padding: 50px 70px;
+  display: flex;
+  flex-direction: column;
+ align-items: center;
 }
 .about-us-container h1{
   text-align: center;
@@ -248,7 +248,7 @@ td >img{
 }
 .about-us-container > img{
   width: 200px;
-  margin:  auto 43%;
+  margin:  auto ;
 }
 .footer-container{
   background: #1E2129;
@@ -263,8 +263,8 @@ td >img{
   width: 170px
 }
 .footer-container .first-row h1{
-  font-size:47px;
-  width: 50%;
+  font-size:37px;
+  /*width: 100%;*/
   color: white;
   font-family: "Inter Tight", sans-serif;
   line-height: 1;
@@ -275,7 +275,7 @@ td >img{
   color: white;
 }
 .collum{
-  margin: 0 80px;
+  margin: 0 0 0 80px;
   display: flex;
   flex-direction: column;
 }
